--- a/studySwift/Podfile
+++ b/studySwift/Podfile
@@ -6,6 +6,8 @@ target 'studySwift' do
   use_frameworks!
 
   # Pods for studySwift
+  pod 'RxSwift', '~> 5'
+  pod 'RxCocoa', '~> 5'
 
   target 'studySwiftTests' do
     inherit! :search_paths
